corrección error de require

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Bsale_Test</h1>
+    <script src="./src/secrets.js"></script>
     <script src="./src/main.js"></script>
 </body>
 </html>
